fixed the width of tour tiles, adjusted flex wrap

--- a/src/components/tours/Tours.css
+++ b/src/components/tours/Tours.css
@@ -6,6 +6,7 @@ ul.tours-container li {
 
 ul.tours-container {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   
 }
